--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "./dist",
     "strict": true,
     "skipLibCheck": true,
+    "moduleDetection": "force",
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop":true
   },
